add metadata to pagination
